tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__HyperAcceleratio-KM9gm3HCTa2OGPWlHHl4fw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8197199677670127743,
  "prerequisites": [
    2539
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Hyper-Acceleration cards are a faster version of the basic acceleration cards. \n\n[note]Hyper-Acceleration cards can only be placed in:[/note]\n\n§cME IO Port (3)\nME Fluid Import Bus (4)\nME Fluid Export Bus (4)\n\n§rIn an IO Port, the Hyper-Acceleration Card will transfer items at a rate of: \n\n§61x Cards: 4,096 items/tick\n2x Cards: 32,768 items/tick\n3x Cards: 262,144 items/tick\n\n§rIn ME Fluid Buses, the Hyper-Acceleration Card will transfer fluids at a rate of:\n\n§61x Cards: 4,096,000 mb/tick\n2x Cards: 32,768,000 mb/tick\n3x Cards: 262,144,000 mb/tick\n",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Hyper Acceleration!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2539
  ],
  "rewards": [],
  "tasks": []
}
