tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__InfiniteWaterCel-GR94tIXOQvC2w5SttlezrQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9641717453865595821,
  "prerequisites": [
    15602242066607108465,
    2623
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The ME Fluid Infinity Water Storage provides §24.5P§r water directly to your AE system, That's the equivalent of 2.25 million reservoir hatches, all conveniently packaged into one drive. \nMight come in handy...\n\n[note]Have fun making those fluid packets![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Infinite Water Cell",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15602242066607108465,
    2623
  ],
  "rewards": [],
  "tasks": []
}
