tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__InsertingItemsIn-AAAAAAAAAAAAAAAAAAAFHA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1308,
  "prerequisites": [
    1301
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Pulls items from the inventory it is pointed at and places them into the ME network's networked storage. You can specify which items it will pull out via the UI, else it tries to pull out any item in the adjacent inventory. The ME import bus will attempt to import any possible options, even if 1 or more of the configured items cannot be stored. This is the functional opposite of the ME export bus.\n\nWhen your machines are very fast, it's better to have them output directly into an ME interface instead, since that works instantly.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Inserting Items Into the Network",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1301
  ],
  "rewards": [],
  "tasks": []
}
