tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__Insurgence-AAAAAAAAAAAAAAAAAAABbQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 365,
  "prerequisites": [
    2545
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Is your infusion very slow? And, alas, to resolve that you need a world accelerator. That probably causes a lot of lag.\n\nWell no longer! Try out the new Infusion Interceptor. Read more about it on the Thaumic Insurgence page in your Thaumonomicon.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Insurgence",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2545
  ],
  "rewards": [],
  "tasks": []
}
