tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__InterfacingwithI-AAAAAAAAAAAAAAAAAAAFFw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1303,
  "prerequisites": [
    1302
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The ME Storage Bus, when attached to another inventory block in the world lets you access that inventory via networked functions. This allows you to use chests, barrels, or other types of item storage in your networks.\n\nThe storage via the ME Storage Bus is bidirectional, it can both insert, or extract items from the inventory block it is attached to as long as the ME storage bus has its required channel.\n\nThe UI allows you to control which items are selected as storable items, this selection has no effect on what items can be extracted once they are in the storage.\n\nThe storage bus will function with nearly any inventory block, including ME Interfaces, EFR barrels, JABBA Barrels, Storage Drawers, etc. They can also be used to route items passively into Buildcraft pipes.\n\nIf you place a storage bus on an ME Interface the storage bus will be able to interact with the full contents of the target network, unless that interface is configured to store items inside itself, in which case it will see those stored items.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Interfacing with Inventories",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1302
  ],
  "rewards": [],
  "tasks": []
}
