tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__ItemVoidCell-AAAAAAAAAAAAAAAAAAABdg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 374,
  "prerequisites": [
    2535
  ],
  "properties": {
    "auto_claim": false,
    "desc": "[warn]Caution! Use with utmost care! This cell does exactly what it says. It deletes everything you put on there. So better make sure you have precise control over what can actually go there.[/warn]\n\n[note]Will only void items, not fluids[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Item Void Cell",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2535
  ],
  "rewards": [],
  "tasks": []
}
